# Room-Rental-and-Pg-Finder

./: README.md
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: main.py  seed.py
backend/app/config/: settings.py
backend/app/database/: mongodb.py
backend/app/middleware/: auth.py
backend/app/models/: collections.py
backend/app/routes/: admin.py  auth.py  bookings.py  notifications.py  properties.py  reviews.py  users.py  wishlists.py
backend/app/schemas/: booking.py  notification.py  property.py  review.py  user.py
backend/app/services/: notification_service.py
backend/app/utils/: helpers.py  security.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Categories.jsx  ChatBox.jsx  FeaturedProperties.jsx  Filters.jsx  Footer.jsx  Hero.jsx  Loader.jsx  Navbar.jsx  PropertyCard.jsx  ProtectedRoute.jsx  Sidebar.jsx  Testimonials.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useAuth.js
frontend/src/layouts/: DashboardLayout.jsx  MainLayout.jsx
frontend/src/pages/: About.jsx  Contact.jsx  ForgotPassword.jsx  Home.jsx  Login.jsx  NotFound.jsx  Profile.jsx  Properties.jsx  PropertyDetails.jsx  Register.jsx  Unauthorized.jsx  Wishlist.jsx
frontend/src/pages/dashboard/: AddProperty.jsx  AdminDashboard.jsx  AdminProperties.jsx  AdminUsers.jsx  ManageProperties.jsx  (+4 more)
frontend/src/services/: api.js  authService.js  bookingService.js  propertyService.js  userService.js
frontend/src/utils/: helpers.js
