[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==4.1.2",
    "certifi>=2024.2.2",
    "dnspython==2.6.1",
    "email-validator==2.1.0.post1",
    "fastapi==0.110.0",
    "motor==3.3.2",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.6.1",
    "pydantic-settings==2.2.1",
    "pymongo==4.6.2",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "uvicorn[standard]==0.27.1",
]
